--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,8 +14,8 @@ jobs:
           password: $DOCKERHUB_PASSWORD  # context / project UI env-var reference
     steps:
       - checkout
-      - run: git submodule sync
-      - run: git submodule update --init
+      #- run: git submodule sync
+      #- run: git submodule update --init
       - setup_remote_docker
       #- run:
       #    name: Install dependencies
@@ -38,7 +38,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=lfs-chroot -t lfs-chroot .
+            docker build --cache-from=lfs-chroot -t innovanon/lfs-chroot .
       - run:
           name: Save Docker image layer cache
           command: |
@@ -58,6 +58,6 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               #docker tag lfs-chroot "InnovAnon-Inc/lfs-chroot:${CIRCLE_SHA1}"
               #docker push           "InnovAnon-Inc/lfs-chroot:${CIRCLE_SHA1}"
-              make push
+              docker push innovanon/lfs-chroot
             fi
 
