--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,10 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build --cache-from=lfs-chroot -t innovanon/lfs-chroot .
+            docker build \
+              --cache-from=lfs-chroot \
+              -t innovanon/lfs-chroot \
+              --build-arg TEST=1 .
       - run:
           name: Save Docker image layer cache
           command: |
