--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,16 +25,16 @@ jobs:
       #      pip install \
       #        docker-compose==1.12.0 \
       #        awscli==1.11.76
-      - restore_cache:
-          keys:
-            - v1-{{ .Branch }}
-          paths:
-            - /caches/app.tar
-      - run:
-          name: Load Docker image layer cache
-          command: |
-            set +o pipefail
-            docker load -i /caches/lfs-chroot.tar | true
+      #- restore_cache:
+      #    keys:
+      #      - v1-{{ .Branch }}
+      #    paths:
+      #      - /caches/app.tar
+      #- run:
+      #    name: Load Docker image layer cache
+      #    command: |
+      #      set +o pipefail
+      #      docker load -i /caches/lfs-chroot.tar | true
       - run:
           name: Build application Docker image
           command: |
@@ -42,15 +42,15 @@ jobs:
               --cache-from=lfs-chroot \
               -t innovanon/lfs-chroot \
               --build-arg TEST=1 .
-      - run:
-          name: Save Docker image layer cache
-          command: |
-            mkdir -p /caches
-            docker save -o /caches/lfs-chroot.tar lfs-chroot
-      - save_cache:
-          key: v1-{{ .Branch }}-{{ epoch }}
-          paths:
-            - /caches/lfs-chroot.tar
+      #- run:
+      #    name: Save Docker image layer cache
+      #    command: |
+      #      mkdir -p /caches
+      #      docker save -o /caches/lfs-chroot.tar lfs-chroot
+      #- save_cache:
+      #    key: v1-{{ .Branch }}-{{ epoch }}
+      #    paths:
+      #      - /caches/lfs-chroot.tar
       #- run:
       #    name: Run tests
       #    command: |
