--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -61,6 +61,7 @@ jobs:
             if [ "${CIRCLE_BRANCH}" == "master" ]; then
               #docker tag lfs-chroot "InnovAnon-Inc/lfs-chroot:${CIRCLE_SHA1}"
               #docker push           "InnovAnon-Inc/lfs-chroot:${CIRCLE_SHA1}"
+              docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
               docker push innovanon/lfs-chroot
             fi
 
