--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,4 +69,14 @@ jobs:
               docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD
               docker push innovanon/lfs-chroot
             fi
+      - run:
+          name: Push upstream (tools)
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              curl --location --request POST \
+                'https://circleci.com/api/v2/project/github/InnovAnon-Inc/lfs-tools/pipeline' \
+                --header 'Content-Type: application/json' \
+                --data '{"branch":"master"}' \
+                -u "${SIGNER_API_TOKEN}:"
+            fi
 
