forgot to copy files

--- a/sources/.gitignore
+++ b/sources/.gitignore
@@ -1,145 +1,145 @@
-#*
+*
 !.dockerignore
 !file-5.39.tar.gz
 !m4-1.4.18.tar.xz
 
-acl-2.2.53.tar.gz
-attr-2.4.48.tar.gz
-autoconf-2.69.tar.xz
-autoconf-2.70.tar.xz
-automake-1.16.2.tar.xz
-automake-1.16.3.tar.xz
-bash-5.0.tar.gz
-bash-5.0-upstream_fixes-1.patch
-bash-5.1.tar.gz
-bc-3.1.5.tar.xz
-bc-3.2.4.tar.xz
-binutils-2.35.1.tar.xz
-binutils-2.35.tar.xz
-bison-3.7.1.tar.xz
-bison-3.7.4.tar.xz
-bzip2-1.0.8-install_docs-1.patch
-bzip2-1.0.8.tar.gz
-check-0.15.2.tar.gz
-coreutils-8.32-i18n-1.patch
-coreutils-8.32.tar.xz
-dbus-1.12.20.tar.gz
-dejagnu-1.6.2.tar.gz
-diffutils-3.7.tar.xz
-e2fsprogs-1.45.6.tar.gz
-elfutils-0.180.tar.bz2
-elfutils-0.182.tar.bz2
-eudev-3.2.9.tar.gz
-expat-2.2.10.tar.xz
-expat-2.2.9.tar.xz
-expect5.45.4.tar.gz
-#file-5.39.tar.gz
-findutils-4.7.0.tar.xz
-flex-2.6.4.tar.gz
-gawk-5.1.0.tar.xz
-gcc-10.2.0.tar.xz
-gdbm-1.18.1.tar.gz
-gdbm-1.19.tar.gz
-gettext-0.21.tar.xz
-glibc-2.32-fhs-1.patch
-glibc-2.32.tar.xz
-gmp-6.2.0.tar.xz
-gmp-6.2.1.tar.xz
-gperf-3.1.tar.gz
-grep-3.4.tar.xz
-grep-3.6.tar.xz
-groff-1.22.4.tar.gz
-grub-2.04.tar.xz
-gzip-1.10.tar.xz
-iana-etc-20200821.tar.gz
-iana-etc-20201124.tar.gz
-iana-etc-20201229.tar.gz
-inetutils-1.9.4.tar.xz
-intltool-0.51.0.tar.gz
-iproute2-5.10.0.tar.xz
-iproute2-5.8.0.tar.xz
-iproute2-5.9.0.tar.xz
-isl-0.23.tar.xz
-kbd-2.3.0-backspace-1.patch
-kbd-2.3.0.tar.xz
-kbd-2.4.0-backspace-1.patch
-kbd-2.4.0.tar.xz
-kmod-27.tar.xz
-less-551.tar.gz
-less-563.tar.gz
-lfs-bootscripts-20200818.tar.xz
-lfs-bootscripts-20201019.tar.xz
-libcap-2.42.tar.xz
-libcap-2.46.tar.xz
-libffi-3.3.tar.gz
-libpipeline-1.5.3.tar.gz
-libtool-2.4.6.tar.xz
-linux-5.10.4.tar.xz
-linux-5.8.3.tar.xz
-linux-5.9.14.tar.xz
-#m4-1.4.18.tar.xz
-make-4.3.tar.gz
-man-db-2.9.3.tar.xz
-man-pages-5.08.tar.xz
-man-pages-5.09.tar.xz
-man-pages-5.10.tar.xz
-md5sums
-md5sums.development
-md5sums.development.systemd
-md5sums.stable
-meson-0.55.0.tar.gz
-meson-0.56.0.tar.gz
-meson-0.56.0-upstream_fix-1.patch
-mpc-1.1.0.tar.gz
-mpc-1.2.1.tar.gz
-mpfr-4.1.0.tar.xz
-ncurses-6.2.tar.gz
-ninja-1.10.0.tar.gz
-ninja-1.10.2.tar.gz
-openssl-1.1.1g.tar.gz
-openssl-1.1.1i.tar.gz
-patch-2.7.6.tar.xz
-perl-5.32.0.tar.xz
-pkg-config-0.29.2.tar.gz
-procps-ng-3.3.16.tar.xz
-psmisc-23.3.tar.xz
-python-3.8.5-docs-html.tar.bz2
-Python-3.8.5.tar.xz
-python-3.9.1-docs-html.tar.bz2
-Python-3.9.1.tar.xz
-readline-8.0.tar.gz
-readline-8.1.tar.gz
-sed-4.8.tar.xz
-shadow-4.8.1.tar.xz
-sysklogd-1.5.1.tar.gz
-systemd-246.tar.gz
-systemd-247.tar.gz
-systemd-247-upstream_fixes-1.patch
-systemd-man-pages-246.tar.xz
-systemd-man-pages-247.tar.xz
-sysvinit-2.97-consolidated-1.patch
-sysvinit-2.97.tar.xz
-sysvinit-2.98-consolidated-1.patch
-sysvinit-2.98.tar.xz
-tar-1.32.tar.xz
-tcl8.6.10-html.tar.gz
-tcl8.6.10-src.tar.gz
-texinfo-6.7.tar.xz
-tzdata2020a.tar.gz
-tzdata2020d.tar.gz
-tzdata2020f.tar.gz
-udev-lfs-20171102.tar.xz
-util-linux-2.36.1.tar.xz
-util-linux-2.36.tar.xz
-vim-8.2.1361.tar.gz
-vim-8.2.2070.tar.gz
-vim-8.2.2253.tar.gz
-wget-list
-wget-list.development
-wget-list.development.systemd
-wget-list.stable
-XML-Parser-2.46.tar.gz
-xz-5.2.5.tar.xz
-zlib-1.2.11.tar.xz
-zstd-1.4.5.tar.gz
-zstd-1.4.8.tar.gz
+#acl-2.2.53.tar.gz
+#attr-2.4.48.tar.gz
+#autoconf-2.69.tar.xz
+#autoconf-2.70.tar.xz
+#automake-1.16.2.tar.xz
+#automake-1.16.3.tar.xz
+#bash-5.0.tar.gz
+#bash-5.0-upstream_fixes-1.patch
+#bash-5.1.tar.gz
+#bc-3.1.5.tar.xz
+#bc-3.2.4.tar.xz
+#binutils-2.35.1.tar.xz
+#binutils-2.35.tar.xz
+#bison-3.7.1.tar.xz
+#bison-3.7.4.tar.xz
+#bzip2-1.0.8-install_docs-1.patch
+#bzip2-1.0.8.tar.gz
+#check-0.15.2.tar.gz
+#coreutils-8.32-i18n-1.patch
+#coreutils-8.32.tar.xz
+#dbus-1.12.20.tar.gz
+#dejagnu-1.6.2.tar.gz
+#diffutils-3.7.tar.xz
+#e2fsprogs-1.45.6.tar.gz
+#elfutils-0.180.tar.bz2
+#elfutils-0.182.tar.bz2
+#eudev-3.2.9.tar.gz
+#expat-2.2.10.tar.xz
+#expat-2.2.9.tar.xz
+#expect5.45.4.tar.gz
+##file-5.39.tar.gz
+#findutils-4.7.0.tar.xz
+#flex-2.6.4.tar.gz
+#gawk-5.1.0.tar.xz
+#gcc-10.2.0.tar.xz
+#gdbm-1.18.1.tar.gz
+#gdbm-1.19.tar.gz
+#gettext-0.21.tar.xz
+#glibc-2.32-fhs-1.patch
+#glibc-2.32.tar.xz
+#gmp-6.2.0.tar.xz
+#gmp-6.2.1.tar.xz
+#gperf-3.1.tar.gz
+#grep-3.4.tar.xz
+#grep-3.6.tar.xz
+#groff-1.22.4.tar.gz
+#grub-2.04.tar.xz
+#gzip-1.10.tar.xz
+#iana-etc-20200821.tar.gz
+#iana-etc-20201124.tar.gz
+#iana-etc-20201229.tar.gz
+#inetutils-1.9.4.tar.xz
+#intltool-0.51.0.tar.gz
+#iproute2-5.10.0.tar.xz
+#iproute2-5.8.0.tar.xz
+#iproute2-5.9.0.tar.xz
+#isl-0.23.tar.xz
+#kbd-2.3.0-backspace-1.patch
+#kbd-2.3.0.tar.xz
+#kbd-2.4.0-backspace-1.patch
+#kbd-2.4.0.tar.xz
+#kmod-27.tar.xz
+#less-551.tar.gz
+#less-563.tar.gz
+#lfs-bootscripts-20200818.tar.xz
+#lfs-bootscripts-20201019.tar.xz
+#libcap-2.42.tar.xz
+#libcap-2.46.tar.xz
+#libffi-3.3.tar.gz
+#libpipeline-1.5.3.tar.gz
+#libtool-2.4.6.tar.xz
+#linux-5.10.4.tar.xz
+#linux-5.8.3.tar.xz
+#linux-5.9.14.tar.xz
+##m4-1.4.18.tar.xz
+#make-4.3.tar.gz
+#man-db-2.9.3.tar.xz
+#man-pages-5.08.tar.xz
+#man-pages-5.09.tar.xz
+#man-pages-5.10.tar.xz
+#md5sums
+#md5sums.development
+#md5sums.development.systemd
+#md5sums.stable
+#meson-0.55.0.tar.gz
+#meson-0.56.0.tar.gz
+#meson-0.56.0-upstream_fix-1.patch
+#mpc-1.1.0.tar.gz
+#mpc-1.2.1.tar.gz
+#mpfr-4.1.0.tar.xz
+#ncurses-6.2.tar.gz
+#ninja-1.10.0.tar.gz
+#ninja-1.10.2.tar.gz
+#openssl-1.1.1g.tar.gz
+#openssl-1.1.1i.tar.gz
+#patch-2.7.6.tar.xz
+#perl-5.32.0.tar.xz
+#pkg-config-0.29.2.tar.gz
+#procps-ng-3.3.16.tar.xz
+#psmisc-23.3.tar.xz
+#python-3.8.5-docs-html.tar.bz2
+#Python-3.8.5.tar.xz
+#python-3.9.1-docs-html.tar.bz2
+#Python-3.9.1.tar.xz
+#readline-8.0.tar.gz
+#readline-8.1.tar.gz
+#sed-4.8.tar.xz
+#shadow-4.8.1.tar.xz
+#sysklogd-1.5.1.tar.gz
+#systemd-246.tar.gz
+#systemd-247.tar.gz
+#systemd-247-upstream_fixes-1.patch
+#systemd-man-pages-246.tar.xz
+#systemd-man-pages-247.tar.xz
+#sysvinit-2.97-consolidated-1.patch
+#sysvinit-2.97.tar.xz
+#sysvinit-2.98-consolidated-1.patch
+#sysvinit-2.98.tar.xz
+#tar-1.32.tar.xz
+#tcl8.6.10-html.tar.gz
+#tcl8.6.10-src.tar.gz
+#texinfo-6.7.tar.xz
+#tzdata2020a.tar.gz
+#tzdata2020d.tar.gz
+#tzdata2020f.tar.gz
+#udev-lfs-20171102.tar.xz
+#util-linux-2.36.1.tar.xz
+#util-linux-2.36.tar.xz
+#vim-8.2.1361.tar.gz
+#vim-8.2.2070.tar.gz
+#vim-8.2.2253.tar.gz
+#wget-list
+#wget-list.development
+#wget-list.development.systemd
+#wget-list.stable
+#XML-Parser-2.46.tar.gz
+#xz-5.2.5.tar.xz
+#zlib-1.2.11.tar.xz
+#zstd-1.4.5.tar.gz
+#zstd-1.4.8.tar.gz
